// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNavigationStack rtl should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-navigation-stack"
  >
    <div
      class="bpk-navigation-stack__view-track"
      style="transform: translateX(100%);"
    >
      <div
        aria-hidden="true"
        class="bpk-navigation-stack__view"
      >
        <div />
      </div>
      <div
        aria-hidden="false"
        class="bpk-navigation-stack__view bpk-navigation-stack__view--current"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkNavigationStack should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-navigation-stack"
  >
    <div
      class="bpk-navigation-stack__view-track"
      style="transform: translateX(-100%);"
    >
      <div
        aria-hidden="true"
        class="bpk-navigation-stack__view"
      >
        <div />
      </div>
      <div
        aria-hidden="false"
        class="bpk-navigation-stack__view bpk-navigation-stack__view--current"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkNavigationStack should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-navigation-stack test"
  >
    <div
      class="bpk-navigation-stack__view-track"
      style="transform: translateX(-100%);"
    >
      <div
        aria-hidden="true"
        class="bpk-navigation-stack__view"
      >
        <div />
      </div>
      <div
        aria-hidden="false"
        class="bpk-navigation-stack__view bpk-navigation-stack__view--current"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
